[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive", "wrap_help"] }
rand = { version = "0.8", features = ["alloc"] }
console = { version = "0.15", default-features = false }
